--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hyper-tomorrow",
-  "version": "1.0.0",
-  "description": "Elegant Hyper theme with bright colors",
+  "version": "1.0.1",
+  "description": "Tomorrow theme for Hyper Terminal",
   "license": "MIT",
   "repository": "karlprieb/hyper-tomorrow",
   "author": {
